--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-homework-template",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://kateryna-gr.github.io/goit-react-hw-04-phonebook/",
+  "homepage": "https://kateryna-gr.github.io/goit-react-hw-06-phonebook/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
@@ -12,7 +12,9 @@
     "nanoid": "^5.0.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-redux": "^8.1.3",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "styled-components": "^6.1.0",
     "web-vitals": "^2.1.3",
     "yup": "^1.3.2"
